add name entry to scanner

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -11,8 +11,10 @@ body {
 }
 
 #root > #home {
-  display: flex;
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #root > .registration-invite,
