--- a/front/src/App.css
+++ b/front/src/App.css
@@ -17,43 +17,13 @@ body {
   justify-content: center;
 }
 
-#root > .registration-invite,
-#root > .registration-invite > h1,
-#root > .registration-invite > h3 {
-  flex-grow: 1;
-  background-color: #272F6C;
-  color: #fff;
-}
-
-#root > .registration-volontaire,
-#root > .registration-volontaire > h1,
-#root > .registration-volontaire > h3 {
-  flex-grow: 1;
-  background-color: #61C674;
-  color: #fff;
-}
-
-#root > .registration-volontaire-referent,
-#root > .registration-volontaire-referent > h1,
-#root > .registration-volontaire-referent > h3 {
-  flex-grow: 1;
-  background-color: #1C4E29;
-  color: #fff;
-}
-
-#root > .registration-village,
-#root > .registration-village > h1,
-#root > .registration-village > h3 {
-  flex-grow: 1;
-  background-color: #19B4C8;
-  color: #fff;
-}
-
-#root > .registration-so,
-#root > .registration-so > h1,
-#root > .registration-so > h3 {
-  background-color: #D73F24;
-  color: #fff;
+#root > .registration > h1,
+#root > .registration > h2,
+#root > .registration > h3,
+#root > .registration > h4,
+#root > .registration > h5,
+#root > .registration > h6 {
+  color: inherit;
 }
 
 #root > #scanner {
@@ -66,9 +36,9 @@ body {
 
 #root > #scanner > #preview {
   position: fixed;
-  left: 0px;
-  right: 0px;
-  top: 0px;
+  left: 0;
+  right: 0;
+  top: 0;
   min-width: 100%;
   min-height: 100%;
   z-index: -1000;
@@ -76,5 +46,4 @@ body {
 
 #root > #scanner > #changeButton {
   flex: 0 0 auto;
-
 }
