--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,20 +1,16 @@
-body {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
 #root {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  max-height: 100vh;
 }
 
 #root > #home {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height: 100vh;
 }
 
 #root > #registration {
@@ -31,21 +27,29 @@ body {
 }
 
 #root > #scanner {
-  flex: auto;
+  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   overflow: hidden;
   justify-content: space-between;
 }
 
-#root > #scanner > #preview {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
+#camera-container {
+  width: 100%;
+  flex: 1 1;
+  overflow: hidden;
+  display: flex;
+}
+
+#preview {
+  margin: auto;
   min-width: 100%;
   min-height: 100%;
-  z-index: -1000;
+}
+
+#preview > video {
+  min-width: 100%;
+  min-height: 100%;
 }
 
 #root > #scanner > #changeButton {
